--- a/app/templates/inc/breadcrumbs.html
+++ b/app/templates/inc/breadcrumbs.html
@@ -21,7 +21,7 @@
     <ol class="breadcrumb bg-transparent p-0 mb-4">
         <li class="breadcrumb-item">
             <a href="/" class="text-decoration-none">
-                <i class="fa-solid fa-house"></i> Home
+                <i class="fa-solid fa-house"></i> Inicio
             </a>
         </li>
         {% for crumb in breadcrumbs %}
