--- a/app/templates/email/send_activation.html
+++ b/app/templates/email/send_activation.html
@@ -41,7 +41,7 @@
                                         <tbody>
                                         <tr>
                                             <td style="line-height: 24px; font-size: 16px; margin: 0;" align="left">
-                                                <img class="w-24" src="https://example.com/logo.png" style="height: auto; line-height: 100%; outline: none; text-decoration: none; display: block; width: 96px; border-style: none; border-width: 0;" width="96">
+                                                <img class="w-24" src="https://moonitor.ciberpunk.es/static/logo.png" style="height: auto; line-height: 100%; outline: none; text-decoration: none; display: block; width: 96px; border-style: none; border-width: 0;" width="96">
                                             </td>
                                         </tr>
                                         </tbody>
@@ -110,7 +110,7 @@
                                         <tbody>
                                         <tr>
                                             <td style="line-height: 24px; font-size: 16px; margin: 0;" align="left">
-                                                <img class="w-40" src="https://example.com/logo-text.png" style="height: auto; line-height: 100%; outline: none; text-decoration: none; display: block; width: 160px; border-style: none; border-width: 0;" width="160">
+                                                <img class="w-40" src="https://moonitor.ciberpunk.es/static/logo.png" style="height: auto; line-height: 100%; outline: none; text-decoration: none; display: block; width: 160px; border-style: none; border-width: 0;" width="160">
                                             </td>
                                         </tr>
                                         </tbody>
