--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -10,7 +10,7 @@
 
                 <div class="d-flex justify-content-center justify-content-lg-start mb-3">
                     <a href="#pricing" class="btn btn-primary btn-lg btn-cta me-3">Empezar Gratis</a>
-                    <a href="#online-test" class="btn btn-secondary btn-lg me-3">Probar online</a>
+                    <a href="#online-test" class="btn btn-secondary btn-lg me-3">Probar Ahora</a>
                 </div>
 
                 <!-- Additional Benefits with Icons -->
