--- a/app/templates/tools/usability/usability_results.html
+++ b/app/templates/tools/usability/usability_results.html
@@ -436,6 +436,7 @@
             </div>
         </div>
     </div>
+    {% include 'tools/buzz_report.html' %}
 </div>
 
 <!-- Add this CSS to handle the overlay and blur effect -->
