--- a/app/templates/tools/domains/results_domains.html
+++ b/app/templates/tools/domains/results_domains.html
@@ -435,6 +435,9 @@
             </div>
         </div>
     </div>
+
+    {% include 'tools/buzz_report.html' %}
+
 </div>
 
 <!-- Add this CSS to handle the overlay and blur effect -->
