--- a/app/templates/tools/seo/results_seo.html
+++ b/app/templates/tools/seo/results_seo.html
@@ -406,6 +406,8 @@
             </div>
         </div>
     </div>
+
+    {% include 'tools/buzz_report.html' %}
 </div>
 
 <!-- Add this CSS to handle the overlay and blur effect -->
